# Elementary_algebra_extractor_for_students

./: agents.py  api.py  bm25_index.pkl  chunking.py  controller.py  dense_indexer.py  evaluator.py  extract_langchain.py  generate_dummy_pdf.py  generator.py  hybrid_search.py  indexer.py  main.py  planner.py  pyproject.toml  requirements.txt  reranker.py  sample_math.docx
faiss_index/: index.faiss  index.pkl
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: ConceptGraph.tsx
