[project]
name = "ir-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=8.19.3",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-elasticsearch>=1.0.0",
    "langchain-huggingface>=1.2.2",
    "pymupdf>=1.27.2.3",
    "reportlab>=4.5.0",
    "sentence-transformers>=5.4.1",
]
