[project]
name = "ir-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=8.19.3",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.3",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-elasticsearch>=1.0.0",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "reportlab>=4.5.0",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.48.0",
]
